--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 			<artifactId>gson</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.22.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
